# parsicle

./: CHANGELOG.md  Cargo.toml  README.md
src/: article.rs  author.rs  content.rs  fetch.rs  href.rs  image.rs  lib.rs  list.rs  main.rs  nlp.rs  paragraph.rs  parse.rs  parse_fail.rs  parsed_article.rs  section.rs  sources.rs
src/sources/: cnn.rs  huffington_post.rs  huffpost.rs  pc_mag.rs  pcmag.rs
src/sources/pcmag/: comparison.rs  news.rs  review.rs
