[package]
authors = ["Bryan Maynard <bsgbryan@gmail.com>"]
name = "parsicle"
version = "25.6.13"
edition = "2024"
description = "A little tool for parsing articles from the web and extracting useful data from them"
license-file = "LICENSE"
repository = "https://github.com/bsgbryan/parsicle"

[dependencies]
chrono = "0.4.41"
reqwest = "0.12.20"
scraper = "0.23.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
