[package]
authors = ["Bryan Maynard <bsgbryan@gmail.com>"]
description = "A little tool for parsing articles from the web and extracting useful data from them"
edition = "2024"
license-file = "LICENSE"
name = "parsicle"
repository = "https://github.com/bsgbryan/parsicle"
version = "25.6.13"

[dependencies]
chrono = "0.4.41"
reqwest = "0.12.20"
scraper = "0.23.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
