[package]
authors = ["Bryan Maynard <bsgbryan@gmail.com>"]
description = "A little tool for parsing articles from the web and extracting useful data from them"
edition = "2024"
license-file = "LICENSE"
name = "parsicle"
repository = "https://github.com/bsgbryan/parsicle"
version = "25.6.13"

[dependencies]
chrono = "0.4.41"
lazy_static = "1.5.0"
postgres-types = { version = "0.2.9", features = ["derive"] }
reqwest = "0.12.22"
scraper = "0.23.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
